results/SVCOMP/conversational/log-StringConstructors05-2024_03_16_23_17_14.txt
public class StringConstructors05 {
    //@ requires arg != null;
    //@ ensures \result ==> arg.equals(new String(new char[]{'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'}));
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s3 = new String(charArray);
        return s3.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors05.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> arg.equals(new String(new char[]{'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'}));
                                       ^
1 error

public class StringConstructors05 {
    //@ requires arg != null;
    //@ ensures \result ==> arg.equals(String.valueOf(new char[]{'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'}));
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s3 = String.valueOf(charArray);
        return s3.equals(arg);
    }
}

